--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,34 @@
 body{
 
-    text-align: end;
+    text-align: center;
     font-size: 30px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-weight: 500;
 
+}
+
+#cabecera{
+
+    height: 100px;
+    width: max-content;
+    padding-left: 50px;
+    font-family: cursive;
+    font-size: 40px;
+    font-weight: 900;
+}
+
+#container{
+    width: 700px;
+    height: 200px;
+    text-align: center;
+    border: 1px solid black;
+    margin: 0 auto;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+
+}
+
+#contenido{
+
+    font-size: 19px;
+    font-family: 'Times New Roman', Times, serif;
 }
