dandole color a la cabecera

--- a/css/style.css
+++ b/css/style.css
@@ -10,11 +10,13 @@ body{
 #cabecera{
 
     height: 100px;
-    width: max-content;
+    width: auto;
+    text-align: left;
     padding-left: 50px;
     font-family: cursive;
     font-size: 40px;
     font-weight: 900;
+    background-color: cornflowerblue;
 }
 
 #container{
