--- a/css/style.css
+++ b/css/style.css
@@ -16,11 +16,25 @@ body{
     font-family: cursive;
     font-size: 40px;
     font-weight: 900;
-    background-color: cornflowerblue;
+    background-color: #0662C4;
+    color: white;
+    border-radius: 10px;
+    margin: 0 100px;
+    box-shadow: 39px 29px 64px 1px rgba(0,0,0,0.75);
+}
+
+#header_info{
+
+    margin-left: 1200px;
+    text-align: right;
+    width: fit-content;
+    font-size: 25px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+
 }
 
 #container{
-    width: 700px;
+    width: 100%;
     height: 200px;
     text-align: center;
     border: 1px solid black;
