--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,9 @@ body{
 
 #contenido{
 
-    font-size: 19px;
+    font-size: 30px;
     font-family: 'Times New Roman', Times, serif;
+    color:#52125A;
+    font-weight: 900;
+
 }
