--- a/css/style.css
+++ b/css/style.css
@@ -4,11 +4,12 @@ body{
     font-size: 30px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-weight: 500;
+    background-color: #DAB0F3;
 
 }
 
 #cabecera{
-
+    padding-top: 30px;
     height: 100px;
     width: auto;
     text-align: left;
@@ -21,15 +22,27 @@ body{
     border-radius: 10px;
     margin: 0 100px;
     box-shadow: 39px 29px 64px 1px rgba(0,0,0,0.75);
+    display: flex;
+    flex-direction: row;
 }
+
+.tiledBackground {
+    background-image: url(../assets/dragon.png);
+    background-size: 50px;
+    width: 50px;
+    height: 50px;
+    color: pink;
+    margin-right: 20px;
+  }
 
 #header_info{
 
-    margin-left: 1200px;
+    margin-left: 1000px;
     text-align: right;
     width: fit-content;
-    font-size: 25px;
+    font-size: 17px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: aqua;
 
 }
 
@@ -40,6 +53,7 @@ body{
     border: 1px solid black;
     margin: 0 100px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background-color: #62C5D1;
 
 }
 
