--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body{
 
     text-align: center;
-    font-size: 30px;
+    font-size: 4vh;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-weight: 500;
     background-color: #DAB0F3;
@@ -9,35 +9,41 @@ body{
 }
 
 #cabecera{
-    padding-top: 30px;
-    height: 100px;
+    padding-top: 5vh;
+    height: 10vh;
     width: auto;
     text-align: left;
-    padding-left: 50px;
+    padding-left: 6vh;
     font-family: cursive;
-    font-size: 40px;
+    font-size: 1em;
     font-weight: 900;
     background-color: #0662C4;
     color: white;
-    border-radius: 10px;
-    margin: 0 100px;
+    border-radius: 1.5vh;
+    margin: 0 12vh;
     box-shadow: 39px 29px 64px 1px rgba(0,0,0,0.75);
     display: flex;
     flex-direction: row;
 }
 
+#face{
+margin: 0%;
+
+}
+
 .tiledBackground {
     background-image: url(../assets/dragon.png);
-    background-size: 50px;
-    width: 50px;
-    height: 50px;
+    background-size: 10vh;
+    width: 10vh;
+    height: 10vh;
     color: pink;
     margin-right: 20px;
+    margin-bottom: 5vh;
   }
 
 #header_info{
 
-    margin-left: 1000px;
+    margin-left: 70vh;
     text-align: right;
     width: fit-content;
     font-size: 17px;
