--- a/css/style.css
+++ b/css/style.css
@@ -54,12 +54,26 @@ margin: 0%;
 
 #container{
     width: auto;
-    height: 200px;
+    height: 60vh;
     text-align: center;
     border: 1px solid black;
     margin: 0 100px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     background-color: #62C5D1;
+    display: flex;
+    flex-direction: column;
+
+}
+
+#body_2{
+
+flex-grow: 1;
+display: flex;
+justify-content: center;
+align-items: center;
+border-top: #52125A solid;
+box-shadow: 0px -11px 22px -2px rgba(0,0,0,0.75);
+font-family: fantasy;
 
 }
 
