--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ width: 80vh;
     text-align: center;
     border: 1px solid black;
     margin: 0 100px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: cursive;
     background-color: #62C5D1;
     display: flex;
     flex-direction: column;
